<resources>
    <string name="app_name">MStart Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID:</string>
    <string name="created_on">Created On:</string>
    <string name="employee_name">Employee Name:</string>
    <string name="address">Address:</string>
    <string name="email">E-mail:</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_password_again">Re-Enter password</string>
    <string name="save">Save</string>
    <string name="department_name">Department Name</string>
    <string name="required_field">Required Field</string>
    <string name="passwords_not_match">Passwrods Not Match</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="attach_your_image">Attach your image</string>
    <string name="delete">Delete</string>
    <string name="items_deleted_message">Selected items deleted</string>
    <string name="personal_image">Personal Image</string>
</resources>
