<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_firstName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_lastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_firstName">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_lastName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_lastName">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_email"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_mobileNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_lastName">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_mobileNumber"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_mobileNumber">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_password"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_reEnterPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_password">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_reEnterPassword"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password_again"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_reEnterPassword">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_address"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/tintColor"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>