<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.haythamayyash.mstarttask.employee.viewmodel.AddEmployeeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_firstName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.firstName}"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_lastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_firstName">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_lastName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.lastName}"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_lastName">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_email"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_mobileNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_email">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_mobileNumber"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:text="@={viewModel.mobileNumber}"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_mobileNumber">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_password"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_reEnterPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_password">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_reEnterPassword"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password_again"
                        android:inputType="textPassword"
                        android:text="@={viewModel.reEnterPassword}"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_reEnterPassword">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_address"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:text="@={viewModel.address}"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_departmentName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/text_input_firstName"
                    app:layout_constraintStart_toStartOf="@id/text_input_firstName"
                    app:layout_constraintTop_toBottomOf="@id/text_input_address">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText_departmentName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/department_name"
                        android:text="@={viewModel.departmentName}"
                        android:textSize="@dimen/edit_text_font_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imageButton_attachImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/tintColor"
                    android:contentDescription="@string/attach_your_image"
                    android:onClick="@{() -> viewModel.onAttachImageClick()}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_departmentName"
                    app:srcCompat="@drawable/ic_attach_file_24" />

                <TextView
                    android:id="@+id/textView_attacheImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onAttachImageClick()}"
                    android:text="@string/attach_your_image"
                    app:layout_constraintBottom_toBottomOf="@id/imageButton_attachImage"
                    app:layout_constraintStart_toEndOf="@id/imageButton_attachImage"
                    app:layout_constraintTop_toTopOf="@id/imageButton_attachImage" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/tintColor"
                    android:onClick="@{() -> viewModel.onSaveClick()}"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageButton_attachImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>